--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@faasjs/cloud_function",
-  "version": "0.0.0-alpha.9",
+  "version": "0.0.0-alpha.10",
   "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -17,7 +17,8 @@
     "lib"
   ],
   "dependencies": {
-    "@faasjs/deep_merge": "beta"
+    "@faasjs/deep_merge": "beta",
+    "@faasjs/load": "beta"
   },
   "devDependencies": {
     "@babel/core": "*",
